# AutoUV

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  unwrap_example.py
autouv/: __init__.py  cli.py  io.py  mesh.py  pack.py  param.py  postprocess.py  render.py  segment.py  unwrap.py  weld.py
server/: app.py  requirements.txt
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  styles.css
