[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autouv"
version = "0.1.0"
description = "Automatic UV unwrapping for low-poly meshes — few, clean, low-distortion islands."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "trimesh>=4.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9"]

[project.scripts]
autouv = "autouv.cli:main"

[tool.setuptools]
packages = ["autouv"]
